# paper-farm

./: .gitignore  .gitmodules  README.ko.md  README.md  paper-farm.example.toml  pyproject.toml  shell.nix
.github/workflows/: release.yml
data/metadata/: abiodun_2021_a_review_on_the_security_of_the_internet.json  akkaya_2005_a_survey_on_routing_protocols_for_wirele.json  al_2023_hybrid_deep_learning_based_intrusion_det.json  al_amiedy_2022_a_systematic_literature_review_on_machin.json  alfriehat_2024_rpl_based_attack_detection_approaches_in.json  alqarni_2023_a_security_scheme_for_statistical_anomal.json  alzaid_2013_reputation_based_trust_systems_for_wirel.json  bao_2011_trust_based_intrusion_detection_in_wirel.json  bao_2012_hierarchical_trust_management_for_wirele.json  bas_2025_adaptive_intrusion_detection_for_evolvin.json  berguiga_2025_hids_rpl_a_hybrid_deep_learning_based_in.json  bokka_2023_securing_iot_networks_rpl_attack_detecti.json  cakir_2020_rpl_attack_detection_and_prevention_in_t.json  cook_2023_security_and_privacy_for_low_power_iot_d.json  dey_2024_itrpl_an_intelligent_and_trusted_rpl_pro.json  el_2020_mw_leach_low_energy_adaptive_clustering_.json  ferdowsi_2019_generative_adversarial_networks_for_dist.json  gad_2022_a_distributed_intrusion_detection_system.json  (+39 more)
pipeline/: export_obsidian.py  ingest.py  parse.py  run_all.py  summarize.py
scripts/: agent_package_batch.sh  monitor.sh  obsidian_auto_add.sh  start-watch.sh  sync.sh
tests/: conftest.py  test_local_summarizer.py  test_normalizer.py  test_pipeline_end_to_end.py  test_pipeline_ingest.py
(+155 files in other folders)
