[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-farm"
version = "0.1.0"
description = "MVP local-first paper ingestion and summarization pipeline"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "paper-farm contributors" }]
dependencies = [
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
paper-farm = "paper_farm.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
